--- a/Code/K_means_dataming.ipynb
+++ b/Code/K_means_dataming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GMT_Time</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Altitude</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Temperatur</th>\n",
+       "      <th>DOP</th>\n",
+       "      <th>Satellites</th>\n",
+       "      <th>Cause_of_F</th>\n",
+       "      <th>Lab_Coord</th>\n",
+       "      <th>Lab_Dur</th>\n",
+       "      <th>Lab_Sat</th>\n",
+       "      <th>Lab_Alt</th>\n",
+       "      <th>No</th>\n",
+       "      <th>time</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-10-15 15:30:00</td>\n",
+       "      <td>36.188406</td>\n",
+       "      <td>-109.904663</td>\n",
+       "      <td>1973.89</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>GPS Schedule</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2022-10-15 09:30:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>POINT (598486.647 4005401.776)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-10-15 15:40:00</td>\n",
+       "      <td>36.190831</td>\n",
+       "      <td>-109.906658</td>\n",
+       "      <td>1978.59</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>GPS Schedule</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2022-10-15 09:40:00</td>\n",
+       "      <td>323.354550</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>POINT (598304.186 4005668.732)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-10-15 15:51:00</td>\n",
+       "      <td>36.193152</td>\n",
+       "      <td>-109.910357</td>\n",
+       "      <td>1985.58</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>GPS Schedule</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2022-10-15 09:51:00</td>\n",
+       "      <td>420.544357</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>35.423757</td>\n",
+       "      <td>POINT (597968.753 4005922.391)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-10-15 16:00:00</td>\n",
+       "      <td>36.194293</td>\n",
+       "      <td>-109.912475</td>\n",
+       "      <td>1993.76</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>GPS Schedule</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2022-10-15 10:00:00</td>\n",
+       "      <td>228.682567</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>32.461346</td>\n",
+       "      <td>POINT (597776.856 4006046.774)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-10-15 16:10:00</td>\n",
+       "      <td>36.196133</td>\n",
+       "      <td>-109.916320</td>\n",
+       "      <td>2000.70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>GPS Schedule</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2022-10-15 10:10:00</td>\n",
+       "      <td>401.486728</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>33.166805</td>\n",
+       "      <td>POINT (597428.922 4006247.107)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              GMT_Time   Latitude   Longitude  Altitude  Duration  Temperatur  \\\n",
+       "0  2022-10-15 15:30:00  36.188406 -109.904663   1973.89      56.0        18.0   \n",
+       "1  2022-10-15 15:40:00  36.190831 -109.906658   1978.59       2.0        17.5   \n",
+       "2  2022-10-15 15:51:00  36.193152 -109.910357   1985.58      63.0        18.5   \n",
+       "3  2022-10-15 16:00:00  36.194293 -109.912475   1993.76       1.0        18.5   \n",
+       "4  2022-10-15 16:10:00  36.196133 -109.916320   2000.70       1.0        20.0   \n",
+       "\n",
+       "   DOP  Satellites    Cause_of_F  Lab_Coord  Lab_Dur  Lab_Sat  Lab_Alt   No  \\\n",
+       "0  2.4         6.0  GPS Schedule        0.0      0.0      0.0      0.0  4.0   \n",
+       "1  4.0         4.0  GPS Schedule        0.0      0.0      0.0      0.0  5.0   \n",
+       "2  1.6         7.0  GPS Schedule        0.0      0.0      0.0      0.0  6.0   \n",
+       "3  1.6         7.0  GPS Schedule        0.0      0.0      0.0      0.0  7.0   \n",
+       "4  2.2         6.0  GPS Schedule        0.0      0.0      0.0      0.0  8.0   \n",
+       "\n",
+       "                  time    distance    dt      speed  \\\n",
+       "0  2022-10-15 09:30:00    0.000000   0.0   0.000000   \n",
+       "1  2022-10-15 09:40:00  323.354550  10.0   0.000000   \n",
+       "2  2022-10-15 09:51:00  420.544357  11.0  35.423757   \n",
+       "3  2022-10-15 10:00:00  228.682567   9.0  32.461346   \n",
+       "4  2022-10-15 10:10:00  401.486728  10.0  33.166805   \n",
+       "\n",
+       "                         geometry  \n",
+       "0  POINT (598486.647 4005401.776)  \n",
+       "1  POINT (598304.186 4005668.732)  \n",
+       "2  POINT (597968.753 4005922.391)  \n",
+       "3  POINT (597776.856 4006046.774)  \n",
+       "4  POINT (597428.922 4006247.107)  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GPS_943 = gpd.read_file('../Data/testData/GPS/943_cl.shp')\n",
+    "GPS_943.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +307,7 @@
        "6890638  6/11/2023 20:56  25.0  17.0  18.0             22.5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +315,7 @@
    "source": [
     "acc_943 = pd.DataFrame()\n",
     "for i in range(1,8):\n",
-    "    acc_tmp = pd.read_csv('~/PhD/P50/Data/testData/Acc/943_Act' + str(i) + '.csv')\n",
+    "    acc_tmp = pd.read_csv('../Data/testData/Acc/943_Act' + str(i) + '.csv')\n",
     "    acc_tmp = acc_tmp.dropna()\n",
     "    acc_943 = pd.concat([acc_943,acc_tmp], ignore_index= True)\n",
     "acc_943 = acc_943.drop('Hour', axis = 1)\n",
@@ -1244,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
