updates to code

--- a/Code/HMM process_CG.ipynb
+++ b/Code/HMM process_CG.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyhmm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyhmm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgaussian\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mga\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyhmm\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mut\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyhmm'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "import pyhhmm.gaussian as ga\n",
-    "import pyhhmm.utils as ut\n",
+    "import pyhmm.gaussian as ga\n",
+    "import pyhmm.utils as ut\n",
     "import numpy as np"
    ]
   },
@@ -19,9 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('PinPoint 799 2021-10-08 10-04-41_activity.csv')\n",
-    "gdf = gpd.read_file('799_cl.shp')\n",
-    "outfile = '799_hmm.shp'"
+    "# df = pd.read_csv('PinPoint 799 2021-10-08 10-04-41_activity.csv')\n",
+    "gdf = gpd.read_file('799_cl.shp') # read in the data set\n",
+    "outfile = '799_hmm.shp' # set the output name"
    ]
   },
   {
@@ -187,7 +199,8 @@
     }
    ],
    "source": [
-    "df"
+    "df = pd.read_csv('799_acc.csv') # read in the accelerrometer data\n",
+    "df "
    ]
   },
   {
@@ -196,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['GMT Time'] = pd.to_datetime(df['GMT Time'])\n",
-    "df['MT Time'] = df['GMT Time'] - pd.Timedelta(hours = 6)"
+    "df['GMT Time'] = pd.to_datetime(df['GMT Time']) # convert the time to date time\n",
+    "df['MT Time'] = df['GMT Time'] - pd.Timedelta(hours = 6) # convert GMT Time to MT time"
    ]
   },
   {
@@ -206,30 +219,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_hmm(df, x_features, n):\n",
-    "    X = df[x_features]\n",
-    "    n_samples = X.shape[0]\n",
-    "    XY = np.zeros((X.shape[0],len(x_features)))\n",
-    "    for x in X.index:\n",
-    "        for y in range(len(x_features)):\n",
-    "            XY[x,y] = X.iloc[x,y]\n",
+    "def run_hmm(df, x_features, n): # make a function to run the HMM model\n",
+    "    X = df[x_features] # the x value is equal to whatever independent variables are available in the model \n",
+    "    n_samples = X.shape[0] # the number of samples is equal to the length of X\n",
+    "    XY = np.zeros((X.shape[0],len(x_features))) # create a numpy array of zeros with the same shape as the x,y data\n",
+    "    for x in X.index: # cycle through the x data\n",
+    "        for y in range(len(x_features)): # cycle through the features in x_features \n",
+    "            XY[x,y] = X.iloc[x,y] # assign the values of XY\n",
     "    \n",
-    "    ghmm = ga.GaussianHMM(\n",
-    "        n_states = n,\n",
-    "        n_emissions = len(x_features),\n",
-    "        covariance_type='diagonal',\n",
+    "    ghmm = ga.GaussianHMM( # initialize the hidden markov model \n",
+    "        n_states = n, # initialze the number of states \n",
+    "        n_emissions = len(x_features),# the number of emissions is equal to the number of x features \n",
+    "        covariance_type='diagonal', # set the covariance type to diagonal\n",
     "        verbose = False\n",
-    "    )\n",
-    "    ghmm, log_likelihood = ghmm.train(\n",
-    "        [XY],\n",
-    "        n_init = 1,\n",
+    "    ) \n",
+    "    ghmm, log_likelihood = ghmm.train( # train the model  \n",
+    "        [XY], # use the XY array to drain the data \n",
+    "        n_init = 1, # initialize n and set it to through 1 iteration \n",
     "        n_iter = 1,\n",
     "        conv_thresh = 0.01,\n",
     "        plot_log_likelihood=False,\n",
     "        no_init=False\n",
     "    )\n",
     "    return(ghmm)\n",
-    "res = run_hmm(df,x_features=['ODBA'],n = 2)   \n"
+    "res = run_hmm(df,x_features=['ODBA'],n = 2)    # run the hmm with the ODBA values and 2 states \n"
    ]
   },
   {
@@ -246,7 +259,7 @@
     }
    ],
    "source": [
-    "print(res.init_params)"
+    "print(res.init_params) # print out hte initial parameters "
    ]
   },
   {
@@ -273,7 +286,7 @@
     }
    ],
    "source": [
-    "print(res)"
+    "print(res) # print out hte result of hte model "
    ]
   },
   {
@@ -298,7 +311,7 @@
     }
    ],
    "source": [
-    "gdf.columns"
+    "gdf.columns # print the columns of hte GDF "
    ]
   },
   {
@@ -683,7 +696,7 @@
    ],
    "source": [
     "\n",
-    "gdf['GMT Time'] = pd.to_datetime(gdf['GMT Time'])\n",
+    "gdf['GMT Time'] = pd.to_datetime(gdf['GMT Time']) # same conversion from GMT to MT \n",
     "gdf['MT Time'] = gdf['GMT Time'] - pd.Timedelta(hours=6)\n",
     "gdf"
    ]
@@ -197800,38 +197813,33 @@
     }
    ],
    "source": [
-    "def pred_hmm(GPS,acc,hmm):\n",
-    "    r_dict = {}\n",
-    "    my_reslist = []\n",
-    "    run = 0\n",
-    "    time_list = GPS['MT Time'].to_list()\n",
-    "    for x in time_list:\n",
-    "        print(run,x)\n",
-    "        time_1 = x - pd.Timedelta(minutes = 7, seconds = 30)\n",
-    "        time_2 = x + pd.Timedelta(minutes = 7, seconds = 30)\n",
-    "        mask = (acc['MT Time'] >= time_1) & (acc['MT Time'] <= time_2)\n",
-    "        data = acc.loc[mask, ['MT Time','ODBA']]\n",
-    "        # if data.empty:\n",
-    "            # print('Data is empty')\n",
-    "            # break\n",
-    "    # else:\n",
-    "        \n",
-    "        mydata = np.zeros((data.shape[0], 1))\n",
-    "        for x in range(data.shape[0]):\n",
-    "            # print(data.iloc[x,1])\n",
-    "            mydata[x,0] = data.iloc[x,1]\n",
+    "def pred_hmm(GPS,acc,hmm): # define a function to predict the hmm \n",
+    "    r_dict = {} # create an empty dictionary\n",
+    "    my_reslist = [] # create an empty list\n",
+    "    run = 0 # running counter set to zero \n",
+    "    time_list = GPS['MT Time'].to_list() # create a list of all possible times in the GPS data \n",
+    "    for x in time_list: # run through the time list \n",
+    "        print(run,x) # print out the running counter and the time (track progress)\n",
+    "        time_1 = x - pd.Timedelta(minutes = 7, seconds = 30) # minimum time, set to be 7 minutes and 30 seconds less than the original\n",
+    "        time_2 = x + pd.Timedelta(minutes = 7, seconds = 30) # minimal time, set to be 7 minutes and 30 seconds greater than the original\n",
+    "        mask = (acc['MT Time'] >= time_1) & (acc['MT Time'] <= time_2) # mask the data by the time window \n",
+    "        data = acc.loc[mask, ['MT Time','ODBA']] # get the data using hte mask\n",
+    "        mydata = np.zeros((data.shape[0], 1)) # create an empty numpy array to hold the data \n",
+    "        for x in range(data.shape[0]): # for each value in the range of data \n",
+    "            # print(data.iloc[x,1]) \n",
+    "            mydata[x,0] = data.iloc[x,1] # assign the numpy value to be equal to it's counterpart in the pandas data frame \n",
     "        # print(mydata)\n",
-    "        results = hmm.predict([mydata])\n",
-    "        r_dict[run] = results\n",
-    "        print(results)\n",
-    "        acc.loc[mask,'U_HMM'] = results[0]\n",
-    "        run +=1\n",
-    "        for r in range(len(results[0])):\n",
+    "        results = hmm.predict([mydata]) # use the hmm model to predict values using the data \n",
+    "        r_dict[run] = results # fill the empty dictionary with the results, using the running ocunter as the key\n",
+    "        print(results) # print results (double check)\n",
+    "        acc.loc[mask,'U_HMM'] = results[0] # assign the results to the masked data \n",
+    "        run +=1 # accelerate the counter \n",
+    "        for r in range(len(results[0])): # checkign values again \n",
     "            my_reslist.append(results[0][r])\n",
     "            print(results[0][r])\n",
     "                \n",
-    "    return(r_dict,my_reslist)\n",
-    "results, list_r = pred_hmm(gdf,df,res)"
+    "    return(r_dict,my_reslist) # return the dictionary and the lsit of values \n",
+    "results, list_r = pred_hmm(gdf,df,res) # run the prediction model "
    ]
   },
   {
@@ -197848,7 +197856,7 @@
     }
    ],
    "source": [
-    "print(list_r)"
+    "print(list_r) # print the list of r "
    ]
   },
   {
@@ -197912,7 +197920,7 @@
     }
    ],
    "source": [
-    "df.loc[:,'Classification'] = df.loc[:,'Classification'].astype('int')"
+    "# df.loc[:,'Classification'] = df.loc[:,'Classification'].astype('int') # convert the results to integers "
    ]
   },
   {
@@ -197934,7 +197942,7 @@
     }
    ],
    "source": [
-    "df.loc[:,'U_HMM'] = df.loc[:,'U_HMM'].astype('int')"
+    "df.loc[:,'U_HMM'] = df.loc[:,'U_HMM'].astype('int') # convert the results to integers"
    ]
   },
   {
@@ -198033,10 +198041,10 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
-    "res = classification_report(df['Classification'],df['U_HMM'], labels = [0,1], output_dict=True)\n",
+    "from sklearn.metrics import classification_report \n",
+    "res = classification_report(df['Classification'],df['U_HMM'], labels = [0,1], output_dict=True) # create a classification report using the results \n",
     "\n",
-    "res = pd.DataFrame(res)\n",
+    "res = pd.DataFrame(res) # convert the table to a dataframe \n",
     "res"
    ]
   },
@@ -199057,21 +199065,21 @@
     }
    ],
    "source": [
-    "onesdict = {}\n",
-    "zerosdict = {}\n",
-    "run = 0\n",
-    "for x in results:\n",
-    "    den = len(results[x][0])\n",
-    "    ones = 0 \n",
+    "onesdict = {} # create an empty dictionary to hold one results \n",
+    "zerosdict = {} # create an empty dictionary to hole zero results  \n",
+    "run = 0 # create a running counter \n",
+    "for x in results: # run through the results \n",
+    "    den = len(results[x][0]) # get the density (# of results)\n",
+    "    ones = 0 # running counter for ones and zeros \n",
     "    zeros = 0\n",
     "    for y in results[x][0]:\n",
-    "        if y ==1:\n",
+    "        if y ==1: # adjust counter based on whether the result is a one or a zero \n",
     "            ones += 1\n",
     "        else:\n",
     "            zeros += 1\n",
-    "    onesrate = ones / den\n",
+    "    onesrate = ones / den # caluclate one and zero rate (number of class/total number of points )\n",
     "    zerorate = zeros / den\n",
-    "    onesdict[run] = onesrate\n",
+    "    onesdict[run] = onesrate # append the value to the empty dictionary \n",
     "    zerosdict[run] = zerorate\n",
     "    run += 1\n",
     "zerosdict"
@@ -199458,7 +199466,7 @@
     }
    ],
    "source": [
-    "gdf['ones'] = onesdict.values()\n",
+    "gdf['ones'] = onesdict.values() # assign the value of the dictionaries to the gdf \n",
     "gdf['zeros'] = zerosdict.values()\n",
     "gdf['ones'] = gdf['ones'].astype('float')\n",
     "gdf['zeros'] = gdf['zeros'].astype('float')\n",
@@ -199471,7 +199479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf['GMT Time'] = gdf['GMT Time'].astype('str')\n",
+    "gdf['GMT Time'] = gdf['GMT Time'].astype('str') # reconvert the times to strings \n",
     "gdf['MT Time'] = gdf['MT Time'].astype('str')"
    ]
   },
@@ -199481,7 +199489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf.to_file(outfile)"
+    "gdf.to_file(outfile) # save the file "
    ]
   }
  ],
@@ -199501,7 +199509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4,
   "vscode": {
