--- a/Code/supervised HMM_CG.ipynb
+++ b/Code/supervised HMM_CG.ipynb
@@ -2,393 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pomegranate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpomegranate\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpg\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pomegranate'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import pomegranate as pg # Import packages "
+    "import pomegranate as pg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GMT Time</th>\n",
-       "      <th>ODBA</th>\n",
-       "      <th>Temperature [C]</th>\n",
-       "      <th>MT Time</th>\n",
-       "      <th>Classification</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8/10/2021 17:45</td>\n",
-       "      <td>319</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>8/10/2021 11:45</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8/10/2021 17:45</td>\n",
-       "      <td>319</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>8/10/2021 11:45</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8/10/2021 17:45</td>\n",
-       "      <td>319</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>8/10/2021 11:45</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8/10/2021 17:45</td>\n",
-       "      <td>319</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>8/10/2021 11:45</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8/10/2021 17:45</td>\n",
-       "      <td>319</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>8/10/2021 11:45</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>8/10/2021 18:14</td>\n",
-       "      <td>336</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>8/10/2021 12:14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>8/10/2021 18:15</td>\n",
-       "      <td>760</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>8/10/2021 12:15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>205</th>\n",
-       "      <td>8/10/2021 18:15</td>\n",
-       "      <td>255</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>8/10/2021 12:15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>206</th>\n",
-       "      <td>8/10/2021 18:15</td>\n",
-       "      <td>223</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>8/10/2021 12:15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>8/10/2021 18:15</td>\n",
-       "      <td>250</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>8/10/2021 12:15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>208 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            GMT Time  ODBA  Temperature [C]          MT Time  Classification\n",
-       "0    8/10/2021 17:45   319             24.0  8/10/2021 11:45               0\n",
-       "1    8/10/2021 17:45   319             24.0  8/10/2021 11:45               0\n",
-       "2    8/10/2021 17:45   319             24.0  8/10/2021 11:45               0\n",
-       "3    8/10/2021 17:45   319             24.0  8/10/2021 11:45               0\n",
-       "4    8/10/2021 17:45   319             24.0  8/10/2021 11:45               0\n",
-       "..               ...   ...              ...              ...             ...\n",
-       "203  8/10/2021 18:14   336             21.5  8/10/2021 12:14               1\n",
-       "204  8/10/2021 18:15   760             21.5  8/10/2021 12:15               1\n",
-       "205  8/10/2021 18:15   255             21.5  8/10/2021 12:15               1\n",
-       "206  8/10/2021 18:15   223             22.0  8/10/2021 12:15               1\n",
-       "207  8/10/2021 18:15   250             22.0  8/10/2021 12:15               1\n",
-       "\n",
-       "[208 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'pom (Python 3.9.19)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n pom ipykernel --update-deps --force-reinstall'"
+     ]
     }
    ],
    "source": [
-    "df = pd.read_csv(r'799 Training.csv')\n",
+    "df = pd.read_csv(r'../Data/799 Training.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['0'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1'],\n",
-       " ['1']]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'pom (Python 3.9.19)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n pom ipykernel --update-deps --force-reinstall'"
+     ]
     }
    ],
    "source": [
-    "dist = pg.MultivariateGaussianDistribution\n",
+    "dist = pg.distribution.Normal()\n",
     "df = pd.read_csv(r'799 Training.csv') # This is your building HMM - this won't change\n",
     "# df = df.dropna() # drop all values without a classification\n",
     "df['Classification'] = df['Classification'].astype('str') # make the classification a string\n",
@@ -406,9 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pomegranate' has no attribute 'HiddenMarkovModel'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mpg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mHiddenMarkovModel\u001b[49m\u001b[38;5;241m.\u001b[39mfrom_samples(dist,n_components \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m,X \u001b[38;5;241m=\u001b[39m X, labels \u001b[38;5;241m=\u001b[39m y, algorithm \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabeled\u001b[39m\u001b[38;5;124m'\u001b[39m, state_names \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;66;03m# Build the model using the above data\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# model\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pomegranate' has no attribute 'HiddenMarkovModel'"
+     ]
+    }
+   ],
    "source": [
     "model = pg.HiddenMarkovModel.from_samples(dist,n_components = 2,X = X, labels = y, algorithm = 'labeled', state_names = ['0','1']) # Build the model using the above data\n",
     "# model"
@@ -765,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4
  },
