--- a/Code/Leo_Cumu_Exp.ipynb
+++ b/Code/Leo_Cumu_Exp.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,17 +640,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/31 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Nan\n",
+      "2 Nan\n",
+      "3 Nan\n",
+      "4 Nan\n",
+      "5 Nan\n",
+      "6 Nan\n",
+      "7 Nan\n",
+      "8 Nan\n",
+      "9 Nan\n",
+      "10 Nan\n",
+      "11 Nan\n",
+      "12 Nan\n",
+      "13 Nan\n",
+      "14 Nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 45%|████▌     | 14/31 [01:34<01:54,  6.74s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 47\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i3[j] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     46\u001b[0m     s \u001b[38;5;241m=\u001b[39m s \u001b[38;5;241m+\u001b[39m  df_hourly\u001b[38;5;241m.\u001b[39mloc[n,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRASTERVALU\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.2\u001b[39m\n\u001b[1;32m---> 47\u001b[0m     p \u001b[38;5;241m=\u001b[39m p \u001b[38;5;241m*\u001b[39m (df_hourly\u001b[38;5;241m.\u001b[39mloc[n,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFM_L\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m/\u001b[39m(\u001b[43mdf_hourly\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mFM_L\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m+\u001b[39mdf_hourly\u001b[38;5;241m.\u001b[39mloc[n,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFM_M\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m+\u001b[39mdf_hourly\u001b[38;5;241m.\u001b[39mloc[n,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFM_H\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i3[j] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m     49\u001b[0m     s \u001b[38;5;241m=\u001b[39m s \u001b[38;5;241m+\u001b[39m  df_hourly\u001b[38;5;241m.\u001b[39mloc[n,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRASTERVALU\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.4\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\DawnMoon\\.conda\\envs\\Geo_Pan\\lib\\site-packages\\pandas\\core\\indexing.py:1178\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1176\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[0;32m   1177\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key):\n\u001b[1;32m-> 1178\u001b[0m     \u001b[43mcheck_dict_or_set_indexers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1179\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(key) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m:\n\u001b[0;32m   1180\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\u001b[38;5;28mlist\u001b[39m(x) \u001b[38;5;28;01mif\u001b[39;00m is_iterator(x) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m key)\n",
+      "File \u001b[1;32mc:\\Users\\DawnMoon\\.conda\\envs\\Geo_Pan\\lib\\site-packages\\pandas\\core\\indexing.py:2765\u001b[0m, in \u001b[0;36mcheck_dict_or_set_indexers\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m   2753\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2754\u001b[0m \u001b[38;5;124;03m    Returns\u001b[39;00m\n\u001b[0;32m   2755\u001b[0m \u001b[38;5;124;03m    -------\u001b[39;00m\n\u001b[0;32m   2756\u001b[0m \u001b[38;5;124;03m    bool\u001b[39;00m\n\u001b[0;32m   2757\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m   2758\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (\n\u001b[0;32m   2759\u001b[0m         obj\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2760\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m obj\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   2761\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m (obj\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m obj\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m   2762\u001b[0m     )\n\u001b[1;32m-> 2765\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_dict_or_set_indexers\u001b[39m(key) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   2766\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2767\u001b[0m \u001b[38;5;124;03m    Check if the indexer is or contains a dict or set, which is no longer allowed.\u001b[39;00m\n\u001b[0;32m   2768\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m   2769\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   2770\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mset\u001b[39m)\n\u001b[0;32m   2771\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m)\n\u001b[0;32m   2772\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mset\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m key)\n\u001b[0;32m   2773\u001b[0m     ):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "for i in range(31):\n",
+    "cum_exp = []\n",
+    "for i in tqdm(range(1,32)):\n",
+    "    not_enough_data = 0\n",
     "    hourly_list = []\n",
     "    try:\n",
     "        tmp_df = oct_df[oct_df['time'].dt.day == i]\n",
     "    except:\n",
     "        continue\n",
-    "    for j in range(8,19):\n",
+    "    for j in range(8,20):\n",
     "        if tmp_df[tmp_df['time'].dt.hour == j].shape[0] > 0: # enough records in current hour\n",
     "            hourly_list.append([tmp_df[tmp_df['time'].dt.hour == j].iloc[0][0], \n",
     "                                tmp_df[tmp_df['time'].dt.hour == j].iloc[0][1], \n",
@@ -671,7 +721,68 @@
     "            \n",
     "        else:\n",
     "            not_enough_data = 1\n",
-    "            break\n"
+    "            break\n",
+    "    \n",
+    "    if not not_enough_data:\n",
+    "        df_hourly = pd.DataFrame(hourly_list, columns = ['FM_L', 'FM_M', 'FM_H', 'RASTERVALU'])\n",
+    "        C_r = []\n",
+    "        C_p = []\n",
+    "        for i3 in comb[0:3**12]:\n",
+    "            n = 0\n",
+    "            s = 0\n",
+    "            p = 1\n",
+    "\n",
+    "            for j in range(0,12):\n",
+    "                if i3[j] == 0:\n",
+    "                    s = s +  df_hourly.loc[n,'RASTERVALU'] * 0.4\n",
+    "                    p = p * (df_hourly.loc[n,'FM_L']/(df_hourly.loc[n,'FM_L']+df_hourly.loc[n,'FM_M']+df_hourly.loc[n,'FM_H']))\n",
+    "                if i3[j] == 1:\n",
+    "                    s = s +  df_hourly.loc[n,'RASTERVALU'] * 0.2\n",
+    "                    p = p * (df_hourly.loc[n,'FM_L']/(df_hourly.loc[n,'FM_L']+df_hourly.loc[n,'FM_M']+df_hourly.loc[n,'FM_H']))\n",
+    "                if i3[j] == 2:\n",
+    "                    s = s +  df_hourly.loc[n,'RASTERVALU'] * 0.4\n",
+    "                    p = p * (df_hourly.loc[n,'FM_L']/(df_hourly.loc[n,'FM_L']+df_hourly.loc[n,'FM_M']+df_hourly.loc[n,'FM_H']))\n",
+    "                n = n + 1\n",
+    "        #    print 'i=',i,'s=',s,'p=',p\n",
+    "            C_r.append(s)\n",
+    "            C_p.append(p)\n",
+    "\n",
+    "        C = pd.DataFrame(data = [C_r,C_p]).T\n",
+    "        C.columns = ['Cr','Cp']\n",
+    "        #C = C.sort_values(by=['Cr'])\n",
+    "        s = C['Cr']*C['Cp']\n",
+    "\n",
+    "        ####\n",
+    "        #Monthly.append(s)\n",
+    "        #Monthly--->csv\n",
+    "        ####\n",
+    "        print (i,s.sum())\n",
+    "        cum_exp.append([i,s.sum()])\n",
+    "    else:\n",
+    "        print (i,'Nan')\n",
+    "        cum_exp.append([i,-1])\n",
+    "cum_exp = pd.DataFrame(cum_exp)\n",
+    "cum_exp.to_csv('../Analysis/Cum_Exp/Leo_939_Oct.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comb[0]"
    ]
   },
   {
