--- a/Code/Leo_Data_stats.ipynb
+++ b/Code/Leo_Data_stats.ipynb
@@ -449,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "geo_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
