--- a/Code/Leo_GPS_Stats.ipynb
+++ b/Code/Leo_GPS_Stats.ipynb
@@ -554,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "geo_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -568,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "2022.10.undefined"
   },
   "orig_nbformat": 4
  },
