--- a/Code/Leo_Proc_GPS_Acc.ipynb
+++ b/Code/Leo_Proc_GPS_Acc.ipynb
@@ -535,7 +535,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Geo_Pan",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
